@@ -41,10 +41,7 @@ if [ X"${DISTRO}" == X'RHEL' ]; then
     export PHP_FPM_PID_FILE='/run/php-fpm/php-fpm.pid'
 
 elif [ X"${DISTRO}" == X'DEBIAN' -o X"${DISTRO}" == X'UBUNTU' ]; then
-    if [ X"${DISTRO_CODENAME}" == X'stretch' ]; then
-        # Debian 9
-        export PHP_VERSION='7.0'
-    elif [ X"${DISTRO_CODENAME}" == X'buster' ]; then
+    if [ X"${DISTRO_CODENAME}" == X'buster' ]; then
         # Debian 10
         export PHP_VERSION='7.3'
     elif [ X"${DISTRO_CODENAME}" == X'bionic' ]; then
